--- a/layouts/partials/call.html
+++ b/layouts/partials/call.html
@@ -1,7 +1,7 @@
 <div class="call">
     <div class="call-box-top">
       {{ if .site.Data.contact.phone }}
-          <div class="call-phone"><strong>Phone: </strong> {{ .site.Data.contact.phone }} </div>
+          <div class="call-phone"><strong>Contact us at: </strong> {{ .site.Data.contact.phone }} </div>
       {{ end }}
       {{ if .site.Data.contact.email }}
       <div class="call-email"><strong>Email: </strong>
