--- a/assets/scss/components/_intro.scss
+++ b/assets/scss/components/_intro.scss
@@ -3,11 +3,11 @@
     justify-content: flex-start;
     align-items: center;
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 0px;
     overflow: hidden;
     @include media-breakpoint-up(md) {
       padding-top: 100px;
-      padding-bottom: 100px;
+      padding-bottom: 50px;
     }
     h1 {
       color: $black;
@@ -45,4 +45,5 @@
     padding-top: 100px;
     padding-bottom: 30px;
   }
-  
+
+.top-buffer {margin-top:50px}
