--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,7 +29,7 @@
       </div>
       {{ end }}
     </div>
-    <div class="row justify-content-center">
+    <div class="row top-buffer justify-content-center">
       {{ range .Site.Data.features }}
       <div class="col-12 col-md-6 col-lg-4 mb-2">
         <a class="feature" href={{ .link}}>
