--- a/layouts/page/schedule.html
+++ b/layouts/page/schedule.html
@@ -1,12 +1,7 @@
 {{ define "body_classes" }}page-schedule{{ end }}
 
 {{ define "main" }}
-<div class="container pb-6 pt-6 pt-md-10 pb-md-10">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-8">
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdPVbyUBD-BAl5BJfYDFUoUT8y4IwK-_l86WD1vaNQQn-_v5A/viewform?embedded=true" width="640" height="1330" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </div>
-  </div>
+<div class="iframe-container">
+  <iframe width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0" src="https://docs.google.com/forms/d/e/1FAIpQLSdPVbyUBD-BAl5BJfYDFUoUT8y4IwK-_l86WD1vaNQQn-_v5A/viewform?embedded=true">Loading…</iframe>
 </div>
-
 {{ end }}
