--- a/layouts/page/volunteer.html
+++ b/layouts/page/volunteer.html
@@ -1,12 +1,7 @@
 {{ define "body_classes" }}page-schedule{{ end }}
 
 {{ define "main" }}
-<div class="container pb-6 pt-6 pt-md-10 pb-md-10">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-8">
-     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeobEUa2EdpuA66zCs5Nk22nmOcrYx6UYb26d8qjReOW970cQ/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </div>
-  </div>
+<div class="iframe-container">
+    <iframe width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0" src="https://docs.google.com/forms/d/e/1FAIpQLSeobEUa2EdpuA66zCs5Nk22nmOcrYx6UYb26d8qjReOW970cQ/viewform?embedded=true" allowfullscreen>Loading…</iframe>
 </div>
-
 {{ end }}
