Added logos - recolored - changed phone number

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,6 @@
 // Colors
-$primary: #67AAF9;
-$secondary: #0096c7;
+$primary: #3788C8;
+$secondary: #0A2239;
 $background: #caf0f8;
 $black: #2f2f41;
 $white: #ffffff;
