--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,9 +15,10 @@
 
 {{ define "main" }}
 <div class="intro">
-  <div class="container">
+  <div class="container"> 
     <div class="row justify-content-start">
       <div class="col-12 col-md-7 col-lg-6 order-2 order-md-1">
+        <img height=100px padding-bottom=50px alt="{{ .Site.Params.logo.alt }}" src="{{ .Site.Params.logo.desktop | relURL }}" />
         {{ .Content }}
         {{ if .Site.Params.homepage.show_call_box }}
         {{ partial "call.html" (dict "site" .Site "context" . "show_button" "true") }}
