Added under construction message

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,6 +14,11 @@
 {{ end }}
 
 {{ define "main" }}
+<div class="container">
+<div row justify-content-center>
+  <h3 class="construction" text-align=center>Notice: Website is still under construction - you can still sign up for early voting rides/volunteering below</h2>
+</div>
+</div>
 <div class="intro">
   <div class="container"> 
     <div class="row justify-content-start">
