added content - changed contact - favicon

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -49,6 +49,7 @@ $sub-footer-text-color: $white;
 @import 'components/content';
 @import 'components/intro';
 @import 'components/intro-image';
+@import 'components/_main-title';
 @import 'components/strip';
 @import 'components/feature';
 @import 'components/social';
