style car graphic

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -50,6 +50,7 @@ $sub-footer-text-color: $white;
 @import 'components/intro';
 @import 'components/intro-image';
 @import 'components/_main-title';
+@import 'components/_info-graphic';
 @import 'components/strip';
 @import 'components/feature';
 @import 'components/social';
