--- a/layouts/page/volunteer-durham.html
+++ b/layouts/page/volunteer-durham.html
@@ -2,6 +2,6 @@
 
 {{ define "main" }}
 <div class="iframe-container">
-    <iframe width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0" src="https://docs.google.com/forms/d/e/1FAIpQLSeobEUa2EdpuA66zCs5Nk22nmOcrYx6UYb26d8qjReOW970cQ/viewform?embedded=true" allowfullscreen>Loading…</iframe>
+    <iframe width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0" src="https://forms.gle/YEc4RGihp5gCMMLd8" allowfullscreen>Loading…</iframe>
 </div>
 {{ end }}
